add submodule netty-in-action

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "essential-netty-in-action"]
 	path = essential-netty-in-action
 	url = git@github.com:waylau/essential-netty-in-action.git
+[submodule "netty-in-action"]
+	path = netty-in-action
+	url = git@github.com:normanmaurer/netty-in-action.git
